# reconflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/quickstart/: README.md  reconflow.yaml
examples/quickstart/data/: broken_cba.csv  broken_cba_quickstart.csv  broken_product.csv  broken_product_quickstart.csv  cba.csv  product.csv
reconflow/: __init__.py  __main__.py  cli.py
reconflow/config/: __init__.py  loader.py  models.py
reconflow/io/: __init__.py  coercion.py  csv.py
reconflow/matching/: __init__.py  engine.py  strategies.py
reconflow/normalize/: __init__.py  decimal.py  reference.py
reconflow/report/: __init__.py  summary.py
tests/: test_config.py  test_matching.py  test_normalize.py  test_quickstart.py
